<resources>
    <string name="app_name">Razvii_pt21–22</string>
    <string name="error_main_info_not_loaded">Error main info not loaded</string>
    <string name="error_additional_info_not_loaded">Additional main info not loaded</string>
    <string name="user_banned_title_text">There could have been a post by user %1s, but he was banned</string>
    <string name="create_new_post">Create new post</string>
    <string name="user_id_hint_edit_text">User id</string>
    <string name="default_user_id">2</string>
    <string name="post_title_hint_edit_text">Post title</string>
    <string name="post_body_hint_edit_text">Post body</string>
    <string name="btn_create_post_text">Create Post</string>
    <string name="error_text_inputs">Error. Please, check inputs</string>
    <string name="post_title_error_message">Post title must be less than 50 and max then 3</string>
    <string name="post_body_error_message">Post body must be less than 500 and max then 5</string>
    <string name="banned_word_error_message">Title contains banned word</string>
</resources>