<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id_hint_edit_text"
        android:inputType="number"
        android:maxLength="5"
        android:text="@string/default_user_id" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title_hint_edit_text"
        android:maxLength="50" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/post_body_hint_edit_text"
        android:maxLength="500"
        android:minHeight="@dimen/body_min_height_size" />

    <Button
        android:id="@+id/btn_create_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_create_post_text" />


</LinearLayout>